# OPGLexp

./: .clang-format  .gitignore  CMakeLists.txt  Demo_rendering.vcxproj  Demo_rendering.vcxproj.filters  OPGLexp.sln  README.md  build.ps1  imgui.ini  vcpkg.json
res/shaders/: DepthPrepass.shader  LightCulling.comp  PBR.shader  ShadowDebug.shader
src/: app.cpp  main.cpp
src/Core/: Application.cpp  Application.h  ComponentId.cpp  ComponentId.h  ComponentRegistry.h  Defines.h  ECS.h  InputManager.cpp  InputManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/Renderer/: BufferLayout.h  ErrorReporting.cpp  ErrorReporting.h  GltfLoader.cpp  GltfLoader.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  camera.cpp  camera.h  glad.c  glad.h  khrplatform.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/UI/: Editor.h  MaterialEditorPanel.cpp  TextureNode.cpp
src/ecs/: ComponentId.h  ComponentManager.cpp  ComponentManager.h  ComponentRegistry.cpp  Core.h  Defines.h  ECS.h  UUID.h
src/helpers/: Filedial.h  GltfLoader.cpp  GltfLoader.h  Logger.cpp  Logger.h
src/tests/: testmodel.cpp  testmodel.h
